@@ -109,24 +109,24 @@ sqlrelay.dll:
 
 ifeq ($(CYGWIN),)
 install: sqlrelay.so
-	$(MKINSTALLDIRS) $(RUBYSITEARCHDIR)
-	$(LTINSTALL) sqlrelay.so $(RUBYSITEARCHDIR)
-	$(MKINSTALLDIRS) $(RUBYSITELIBDIR)/DBD/SQLRelay
-	$(INSTALL) -m 644 SQLRelay.rb $(RUBYSITELIBDIR)/DBD/SQLRelay
+	$(MKINSTALLDIRS) $(DESTDIR)$(RUBYSITEARCHDIR)
+	$(LTINSTALL) sqlrelay.so $(DESTDIR)$(RUBYSITEARCHDIR)
+	$(MKINSTALLDIRS) $(DESTDIR)$(RUBYSITELIBDIR)/DBD/SQLRelay
+	$(INSTALL) -m 644 SQLRelay.rb $(DESTDIR)$(RUBYSITELIBDIR)/DBD/SQLRelay
 	$(RM) sqlrelay.so
 
 uninstall:
-	$(LIBTOOL) --mode=uninstall $(RM) $(RUBYSITEARCHDIR)/sqlrelay.so
-	$(RMTREE) $(RUBYSITELIBDIR)/DBD/SQLRelay
+	$(LIBTOOL) --mode=uninstall $(RM) $(DESTDIR)$(RUBYSITEARCHDIR)/sqlrelay.so
+	$(RMTREE) $(DESTDIR)$(RUBYSITELIBDIR)/DBD/SQLRelay
 else
 install: sqlrelay.dll
-	$(MKINSTALLDIRS) $(RUBYSITEARCHDIR)
-	$(LTINSTALL) sqlrelay.dll $(RUBYSITEARCHDIR)
-	$(MKINSTALLDIRS) $(RUBYSITELIBDIR)/DBD/SQLRelay
-	$(INSTALL) -m 644 SQLRelay.rb $(RUBYSITELIBDIR)/DBD/SQLRelay
+	$(MKINSTALLDIRS) $(DESTDIR)$(RUBYSITEARCHDIR)
+	$(LTINSTALL) sqlrelay.dll $(DESTDIR)$(RUBYSITEARCHDIR)
+	$(MKINSTALLDIRS) $(DESTDIR)$(RUBYSITELIBDIR)/DBD/SQLRelay
+	$(INSTALL) -m 644 SQLRelay.rb $(DESTDIR)$(RUBYSITELIBDIR)/DBD/SQLRelay
 	$(RM) sqlrelay.dll
 
 uninstall:
-	$(LIBTOOL) --mode=uninstall $(RM) $(RUBYSITEARCHDIR)/sqlrelay.dll
-	$(RMTREE) $(RUBYSITELIBDIR)/DBD/SQLRelay
+	$(LIBTOOL) --mode=uninstall $(RM) $(DESTDIR)$(RUBYSITEARCHDIR)/sqlrelay.dll
+	$(RMTREE) $(DESTDIR)$(RUBYSITELIBDIR)/DBD/SQLRelay
 endif
