@@ -68,6 +68,8 @@
 	added a mapping between sqlite3_free and sqlite_freemem
 	added a fix for a race condition in the scaler
 	fixed a postgresql bind memory leak
+	applied Renat's ruby DESTDIR patch and updated helper scripts to
+		remove $(DESTDIR) from all the variables that it outputs
 
 0.41 - added configure test for ruby.h
 	added a couple of new functions to the mysql drop-in library
